# chuk-mcp-music

./: .gitignore  Makefile  README.md  pyproject.toml  roadmap.md
.github/workflows/: ci.yml  test.yml
examples/: compile_arrangement.py  demo.arrangement.yaml  generate_midi.py  score_ir_roundtrip.py  use_styles.py
src/chuk_mcp_music/: __init__.py  async_server.py  constants.py  server.py
src/chuk_mcp_music/arrangement/: __init__.py  manager.py  validator.py
src/chuk_mcp_music/compiler/: __init__.py  arranger.py  midi.py  score_ir.py
src/chuk_mcp_music/core/: __init__.py  chord.py  pitch.py  rhythm.py  scale.py
src/chuk_mcp_music/models/: __init__.py  arrangement.py  pattern.py  style.py
src/chuk_mcp_music/patterns/: __init__.py  compiler.py  registry.py
src/chuk_mcp_music/styles/: __init__.py  loader.py  resolver.py
src/chuk_mcp_music/tokens/: __init__.py
src/chuk_mcp_music/tools/: __init__.py  arrangement.py  compilation.py  patterns.py  structure.py  styles.py
tests/: __init__.py  conftest.py  test_arrangement.py  test_arrangement_compiler.py  test_core_primitives.py  test_midi_export.py  test_pattern.py  test_score_ir.py  test_style.py  test_tools.py
